--- a/index.html
+++ b/index.html
@@ -2,261 +2,166 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Google Play Store Analytics | Null Class Internship</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Google Play Store Analytics | Null Class Internship</title>
 
     <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background: #f4f6f9;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
             color: #333;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
         }
+        .container { max-width: 1200px; margin: 0 auto; padding: 20px; }
 
         header {
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            color: white;
-            padding: 35px 20px;
+            background: white;
+            padding: 40px 20px;
             text-align: center;
+            border-radius: 10px;
+            margin-bottom: 30px;
         }
+        header h1 { color: #667eea; font-size: 2.5em; }
+        header p { color: #666; font-size: 1.2em; }
 
-        header h1 {
-            margin: 0;
-            font-size: 32px;
-        }
-
-        header p {
-            margin-top: 10px;
-            font-size: 16px;
-            opacity: 0.95;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 30px auto;
-            padding: 0 20px;
+        .badge {
+            display: inline-block;
+            background: #667eea;
+            color: white;
+            padding: 8px 16px;
+            margin: 5px;
+            border-radius: 20px;
+            font-size: 0.9em;
+            font-weight: bold;
         }
 
         .section {
             background: white;
-            padding: 25px;
+            padding: 30px;
             margin-bottom: 30px;
             border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.08);
         }
 
-        .section h2 {
-            margin-top: 0;
-            color: #667eea;
-            border-bottom: 3px solid #667eea;
-            padding-bottom: 10px;
-        }
-
-        .project-grid {
+        .projects-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
             gap: 25px;
-            margin-top: 20px;
         }
 
         .project-card {
             border: 2px solid #667eea;
             border-radius: 10px;
             overflow: hidden;
-            background: #fff;
-            transition: transform 0.3s;
-        }
-
-        .project-card:hover {
-            transform: translateY(-6px);
-            box-shadow: 0 10px 18px rgba(0,0,0,0.15);
         }
 
         .project-header {
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 15px;
+            padding: 20px;
         }
 
-        .project-header h3 {
-            margin: 0;
-            font-size: 20px;
-        }
+        .project-body { padding: 20px; }
+        .project-body img { width: 100%; border-radius: 8px; }
 
-        .project-body {
-            padding: 18px;
-        }
-
-        .project-body p {
-            font-size: 14px;
-            margin-bottom: 10px;
-        }
-
-        .project-body ul {
-            margin-left: 18px;
-            font-size: 14px;
-            color: #555;
-        }
-
-        .btn {
+        .btn-demo {
             display: inline-block;
             background: #667eea;
             color: white;
-            padding: 10px 18px;
-            margin-top: 12px;
+            padding: 10px 20px;
+            margin-top: 10px;
             border-radius: 5px;
             text-decoration: none;
-            font-size: 14px;
         }
-
-        .btn:hover {
-            background: #764ba2;
-        }
-
-        footer {
-            background: #2c3e50;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            font-size: 14px;
-        }
+        .btn-demo:hover { background: #764ba2; }
     </style>
 </head>
 
 <body>
-
-<header>
-    <h1>📊 Google Play Store Analytics Dashboard</h1>
-    <p>Null Class Data Analytics Internship | 6 Visualization Projects</p>
-</header>
-
 <div class="container">
 
-    <div class="section">
-        <h2>📚 Project Overview</h2>
-        <p>
-            This dashboard presents six interactive data visualization projects created using
-            <strong>Python, Pandas, NumPy, Plotly</strong> on the Google Play Store dataset.
-            Each project follows specific business rules and time-based constraints as defined
-            in the internship guidelines.
-        </p>
-    </div>
+<header>
+    <h1>🎓 Google Play Store Analytics</h1>
+    <p>Data Analytics Internship Project - Null Class</p>
+    <span class="badge">Python</span>
+    <span class="badge">Pandas</span>
+    <span class="badge">Plotly</span>
+    <span class="badge">6 Projects</span>
+</header>
 
-    <div class="section">
-        <h2>🎯 Visualization Projects</h2>
+<div class="section">
+<h2>🎯 Six Visualization Projects</h2>
 
-        <div class="project-grid">
+<div class="projects-grid">
 
-            <!-- Project 1 -->
-            <div class="project-card">
-                <div class="project-header">
-                    <h3>Project 1: Grouped Bar Chart</h3>
-                </div>
-                <div class="project-body">
-                    <p>Top 10 categories comparison by ratings and reviews.</p>
-                    <ul>
-                        <li>Rating ≥ 4.0</li>
-                        <li>Size ≥ 10 MB</li>
-                        <li>Updated in January</li>
-                        <li>Time: 3–5 PM IST</li>
-                    </ul>
-                    <a href="outputs/project1_grouped_bar_chart.html" class="btn">📊 View Chart</a>
-                </div>
-            </div>
-
-            <!-- Project 2 -->
-            <div class="project-card">
-                <div class="project-header">
-                    <h3>Project 2: Dual Axis Chart</h3>
-                </div>
-                <div class="project-body">
-                    <p>Free vs Paid apps installs and revenue analysis.</p>
-                    <ul>
-                        <li>Installs ≥ 10,000</li>
-                        <li>Revenue ≥ $10,000</li>
-                        <li>Android > 4.0</li>
-                        <li>Time: 1–2 PM IST</li>
-                    </ul>
-                    <a href="outputs/project2_dual_axis_chart.html" class="btn">📊 View Chart</a>
-                </div>
-            </div>
-
-            <!-- Project 3 -->
-            <div class="project-card">
-                <div class="project-header">
-                    <h3>Project 3: Choropleth Map</h3>
-                </div>
-                <div class="project-body">
-                    <p>Global installs distribution by category.</p>
-                    <ul>
-                        <li>Installs &gt; 1M</li>
-                        <li>Top 5 categories</li>
-                        <li>Geographical visualization</li>
-                        <li>Time: 6–8 PM IST</li>
-                    </ul>
-                    <a href="outputs/project3_choropleth_map.html" class="btn">🌍 View Map</a>
-                </div>
-            </div>
-
-            <!-- Project 4 -->
-            <div class="project-card">
-                <div class="project-header">
-                    <h3>Project 4: Stacked Area Chart</h3>
-                </div>
-                <div class="project-body">
-                    <p>Cumulative installs growth over time.</p>
-                    <ul>
-                        <li>Rating ≥ 4.0</li>
-                        <li>Categories T & P</li>
-                        <li>Multi-language labels</li>
-                        <li>Time: 4–6 PM IST</li>
-                    </ul>
-                    <a href="outputs/project4_stacked_area_chart.html" class="btn">📈 View Chart</a>
-                </div>
-            </div>
-
-            <!-- Project 5 -->
-            <div class="project-card">
-                <div class="project-header">
-                    <h3>Project 5: Bubble Chart</h3>
-                </div>
-                <div class="project-body">
-                    <p>App size vs rating vs installs analysis.</p>
-                    <ul>
-                        <li>Rating &gt; 3.5</li>
-                        <li>Sentiment subjectivity &gt; 0.5</li>
-                        <li>9 selected categories</li>
-                        <li>Time: 5–7 PM IST</li>
-                    </ul>
-                    <a href="outputs/project5_bubble_chart.html" class="btn">🟣 View Chart</a>
-                </div>
-            </div>
-
-            <!-- Project 6 -->
-            <div class="project-card">
-                <div class="project-header">
-                    <h3>Project 6: Time Series Chart</h3>
-                </div>
-                <div class="project-body">
-                    <p>Install trends and growth analysis over time.</p>
-                    <ul>
-                        <li>MoM growth highlighting</li>
-                        <li>Filtered app names</li>
-                        <li>Interactive timeline</li>
-                        <li>Time: 6–9 PM IST</li>
-                    </ul>
-                    <a href="outputs/project6_time_series_chart.html" class="btn">⏱ View Chart</a>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
+<div class="project-card">
+<div class="project-header">
+<h3>Project 1: Grouped Bar Chart</h3>
+</div>
+<div class="project-body">
+<img src="screenshots/project1_result.png">
+<a href="outputs/project1_grouped_bar_chart.html" class="btn-demo">📊 View Demo</a>
+</div>
 </div>
 
-<footer>
-    © 2026 | Jayaakshaya J | Null Class Data Analytics Internship  
+<div class="project-card">
+<div class="project-header">
+<h3>Project 2: Dual Axis Chart</h3>
+</div>
+<div class="project-body">
+<img src="screenshots/project2_result.png">
+<a href="outputs/project2_dual_axis_chart.html" class="btn-demo">📊 View Demo</a>
+</div>
+</div>
+
+<div class="project-card">
+<div class="project-header">
+<h3>Project 3: Choropleth Map</h3>
+</div>
+<div class="project-body">
+<img src="screenshots/project3_result.png">
+<a href="outputs/project3_choropleth_map.html" class="btn-demo">📊 View Demo</a>
+</div>
+</div>
+
+<div class="project-card">
+<div class="project-header">
+<h3>Project 4: Stacked Area Chart</h3>
+</div>
+<div class="project-body">
+<img src="screenshots/project4_result.png">
+<a href="outputs/project4_stacked_area_chart.html" class="btn-demo">📊 View Demo</a>
+</div>
+</div>
+
+<div class="project-card">
+<div class="project-header">
+<h3>Project 5: Bubble Chart</h3>
+</div>
+<div class="project-body">
+<img src="screenshots/project5_result.png">
+<a href="outputs/project5_bubble_chart.html" class="btn-demo">📊 View Demo</a>
+</div>
+</div>
+
+<div class="project-card">
+<div class="project-header">
+<h3>Project 6: Time Series Chart</h3>
+</div>
+<div class="project-body">
+<img src="screenshots/project6_result.png">
+<a href="outputs/project6_time_series_chart.html" class="btn-demo">📊 View Demo</a>
+</div>
+</div>
+
+</div>
+</div>
+
+<footer class="section">
+<p>© 2026 Jayaakshaya J | Null Class Internship</p>
 </footer>
 
+</div>
 </body>
 </html>
