--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                             <span class="tech-tag">Data Cleaning</span>
                         </div>
 
-                        <a href="outputs/project1_chart.html" class="btn-demo">📊 View Demo</a>
+                        <a href="outputs/project1_grouped_bar_chart.html" class="btn-demo">📊 View Demo</a>
                     </div>
                 </div>
 
@@ -559,14 +559,14 @@
                             <span class="tech-tag">Revenue Calc</span>
                         </div>
 
-                        <a href="outputs/project2_chart.html" class="btn-demo">📊 View Demo</a>
+                        <a href="outputs/project2_dual_axis_chart.html" class="btn-demo">📊 View Demo</a>
                     </div>
                 </div>
 
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>Project 3: Treemap</h3>
+                        <h3>Project 3: Choropleth Map</h3>
                         <p>Global Installs by Category</p>
                     </div>
                     <div class="project-body">
@@ -592,7 +592,7 @@
                             <span class="tech-tag">Hierarchical</span>
                         </div>
 
-                        <a href="outputs/project3_treemap.html" class="btn-demo">📊 View Demo</a>
+                        <a href="outputs/project3_choropleth_map.html" class="btn-demo">📊 View Demo</a>
                     </div>
                 </div>
 
@@ -633,7 +633,7 @@
                             <span class="tech-tag">Translations</span>
                         </div>
 
-                        <a href="outputs/project4_chart.html" class="btn-demo">📊 View Demo</a>
+                        <a href="outputs/project4_stacked_area_chart.html" class="btn-demo">📊 View Demo</a>
                     </div>
                 </div>
 
@@ -676,7 +676,7 @@
                             <span class="tech-tag">Multi-Language</span>
                         </div>
 
-                        <a href="outputs/project5_chart.html" class="btn-demo">📊 View Demo</a>
+                        <a href="outputs/project5_bubble_chart.html" class="btn-demo">📊 View Demo</a>
                     </div>
                 </div>
 
@@ -717,7 +717,7 @@
                             <span class="tech-tag">Shading</span>
                         </div>
 
-                        <a href="outputs/project6_chart.html" class="btn-demo">📊 View Demo</a>
+                        <a href="outputs/project6_time_series_chart.html" class="btn-demo">📊 View Demo</a>
                     </div>
                 </div>
             </div>
